test-scenarios/microservices-demo-gke/breakage-scenarios/breakage1-checkout/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: update-checkout-from-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: checkoutservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          # This label does not exist on the frontend, causing a "Default Deny"
          app: frontend-checkout-test
